@@ -59,9 +59,23 @@ export PATH="$HOME/.composer/vendor/bin:$PATH"
 export PYENV_ROOT="$HOME/.pyenv"
 export PATH="$PYENV_ROOT/bin:$PATH"
 
+# export JAVA_HOME=$(/usr/libexec/java_home)
+export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)
+export PATH="$JAVA_HOME/bin:$PATH"
+
+# export ANDROID_HOME=$HOME/Library/Android/
+# export ANDROID_HOME="$HOME/Library/Android/sdk"
+# export PATH="$ANDROID_HOME:$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH"
+# path=("${ANDROID_HOME}/platform-tools:${ANDROID_HOME}/tools" $path)
+
+# export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
+export ANDROID_SDK_ROOT="$HOME/Library/Android/sdk"
 export ANDROID_HOME="$HOME/Library/Android/sdk"
-# export PATH="${ANDROID_HOME}/platform-tools:${ANDROID_HOME}/tools:$PATH"
-path=("${ANDROID_HOME}/platform-tools:${ANDROID_HOME}/tools" $path)
+PATH="$PATH:$ANDROID_SDK_ROOT"
+PATH="$PATH:$ANDROID_SDK_ROOT/emulator"
+PATH="$PATH:$ANDROID_SDK_ROOT/tools"
+PATH="$PATH:$ANDROID_SDK_ROOT/tools/bin"
+PATH="$PATH:$ANDROID_SDK_ROOT/platform-tools"
 
 if command -v pyenv 1>/dev/null 2>&1; then
   eval "$(pyenv init -)"
